--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "tsc && node test.js"
+    "test": "swc *.ts -d build-swc && tsc && node test.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@swc-node/register": "^1.4.2",
+    "regenerator-runtime": "^0.13.9",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
+  },
+  "devDependencies": {
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.2.171"
   }
 }
