--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "target": "es2016",
         "lib": ["ES2019", "DOM"],
         "module": "commonjs",
-        "outDir": "./build",
+        "outDir": "./build-tsc",
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
